Testing merge with Bulma and Yubi SB

--- a/docs/_layouts/docs.html
+++ b/docs/_layouts/docs.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>YED Spoke Example</title>
     <link rel="stylesheet" href="/assets/css/bulma.min.css">
+    <link rel="stylesheet" href="/assets/css/styles.css">
   </head>
   <body>
     <h1>{{ page.title }}</h1>
