--- a/docs/_sass/_cscustom.scss
+++ b/docs/_sass/_cscustom.scss
@@ -8,16 +8,18 @@
     width: auto;
     margin-top: .5em;
     margin-bottom: .5em;
+    padding: 0em;
 }
 
 .heroImage {
-	background: linear-gradient(rgba(132, 189, 0,0.5), rgba(132, 189, 0,0.9)), url("/ghp-test/assets/images/heroimage.jpg");
+	background: linear-gradient(rgba(132, 189, 0,0.5), rgba(132, 189, 0,0.9)), url("/assets/images/heroimage.jpg");
 	background-position: center;
 	background-repeat: no-repeat;
 	position: relative;
     width: 100%;
     height: 100%;
-    padding: 3em 0em;
+    padding: 1.5em 0em;
+    margin-bottom: 2em;
 }
 
 .heroContents {
@@ -30,39 +32,33 @@
     color: white;
 }
 
-.table-of-contents {
-    background-color: $hero-gray-1;
-    width:fit-content;
-    padding: 1em 4em 1em 2em;
-    border-left: 1em solid $hero-gray-2;
-    box-shadow: 0 4px 2px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-}
-
-.container {
-    margin: 2em 0em 2em 0em;
-    width: 80%;
-}
-
-a {
-    text-decoration: none;
-    font-weight: 600;
-}
-
-h2 {
-    margin-top: 1em
+h3 {
+    padding-top: 2em;
 }
 
 img {
-  width: 40%;
-  height: 20%;
-  margin-top: 2em;
-  margin-bottom: 2em;
-  display: block;
+    padding: 1em;
+    display: block;
+}
+
+ul.table-of-contents {
+    border-left: 3px solid $blue-8;
+}
+
+ul.table-of-contents li {
+    margin-bottom: .5rem;
 }
 
 .highlight {
     padding: 1em .5em 0em .5em;
     background-color: #f0f0f0;
+}
+
+.btns {
+    justify-content: right;
+}
+.btns a {
+    margin: 1em;
 }
 
 .highlight .hll { background-color: #ffc; }
