Added link styles and formatting tweaks

--- a/docs/_includes/navigation.html
+++ b/docs/_includes/navigation.html
@@ -1,50 +1,52 @@
-<h4>Table of Contents</h4>
-<h6><a href="/">Overview</a></h6>
-<h6>Learn</h6>
-<ul class="table-of-contents">
-    <li>
-        <a href="/learn/prerequisites">Prerequisites</a>
-    </li>
-    <li>
-        <a href="/learn/create-a-scoped-application">Create a Scoped Application</a>
-    </li>
-    <li>
-        <a href="/learn/add-to-service-catalog">Add a YubiKey to the Service Catalog</a>
-    </li>
-    <li>
-        <a href="/learn/create-action">Create the Action</a>
-    </li>
-    <li>
-        <a href="/learn/define-action-inputs">Define Action Inputs</a>
-    </li>
-    <li>
-        <a href="/learn/input-script">The Input Script Step</a>
-    </li>
-    <li>
-        <a href="/learn/rest-step">The REST Step</a>
-    </li>
-    <li>
-        <a href="/learn/output-script">The Output Script Step</a>
-    </li>
-    <li>
-        <a href="/learn/action-outputs">Action Outputs</a>
-    </li>
-    <li>
-        <a href="/learn/create-shipment-request-flow">Create the Shipment Request Flow</a>
-    </li>
-    <li>
-        <a href="/learn/add-flow-logic">Add the Flow Logic to the Flow</a>
-    </li>
-    <li>
-        <a href="/learn/test-flow">Test the Flow</a>
-    </li>
-    <li>
-        <a href="/learn/call-flow-from-workflow">Call the Flow From a Workflow</a>
-    </li>
-    <li>
-        <a href="/learn/test-workflow">Test the Workflow</a>
-    </li>
-</ul>
-<h6><a href="/references">References</a></h6>
-<h6><a href="/help-and-support">Help and Support</a></h6>
+<div class="nav-toc">
+    <h4>Table of Contents</h4>
+    <h6><a href="/">Overview</a></h6>
+    <h6>Learn</h6>
+    <ul class="table-of-contents">
+        <li>
+            <a href="/learn/prerequisites">Prerequisites</a>
+        </li>
+        <li>
+            <a href="/learn/create-a-scoped-application">Create a Scoped Application</a>
+        </li>
+        <li>
+            <a href="/learn/add-to-service-catalog">Add a YubiKey to the Service Catalog</a>
+        </li>
+        <li>
+            <a href="/learn/create-action">Create the Action</a>
+        </li>
+        <li>
+            <a href="/learn/define-action-inputs">Define Action Inputs</a>
+        </li>
+        <li>
+            <a href="/learn/input-script">The Input Script Step</a>
+        </li>
+        <li>
+            <a href="/learn/rest-step">The REST Step</a>
+        </li>
+        <li>
+            <a href="/learn/output-script">The Output Script Step</a>
+        </li>
+        <li>
+            <a href="/learn/action-outputs">Action Outputs</a>
+        </li>
+        <li>
+            <a href="/learn/create-shipment-request-flow">Create the Shipment Request Flow</a>
+        </li>
+        <li>
+            <a href="/learn/add-flow-logic">Add the Flow Logic to the Flow</a>
+        </li>
+        <li>
+            <a href="/learn/test-flow">Test the Flow</a>
+        </li>
+        <li>
+            <a href="/learn/call-flow-from-workflow">Call the Flow From a Workflow</a>
+        </li>
+        <li>
+            <a href="/learn/test-workflow">Test the Workflow</a>
+        </li>
+    </ul>
+    <h6><a href="/references">References</a></h6>
+    <h6><a href="/help-and-support">Help and Support</a></h6>
+</div>
 
