--- a/docs/_layouts/docs.html
+++ b/docs/_layouts/docs.html
@@ -10,7 +10,8 @@
   </head>
   <body>
     {% include heading.html %}
-    <div class="columns">
+    <div class="main-body">
+      <div class="columns">
         <div class="column is-3">
             {% include navigation.html %}
         </div>
@@ -18,5 +19,7 @@
                 {{ content }}
         </div>
     </div>
+    </div>
+
   </body>
 </html>
