--- a/docs/_layouts/docs.html
+++ b/docs/_layouts/docs.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="/assets/css/styles.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="/assets/js/cscustom.js"></script>
+    <link rel="icon" type="image/png" href="/assets/images/yubico-icon.png">
   </head>
   <body>
     {% include heading.html %}
