--- a/docs/_includes/heading.html
+++ b/docs/_includes/heading.html
@@ -3,7 +3,7 @@
 </div>
 <div class="heroImage">
     <div class="heroContents">
+        <h1>YED Spoke Tutorial</h1>
         <h4>Yubico Developer Program</h4>
-        <h1>YED Spoke Example</h1>
     </div>
 </div>
