URL changes affected formatting

--- a/docs/_layouts/docs.html
+++ b/docs/_layouts/docs.html
@@ -3,11 +3,11 @@
   <head>
     <meta charset="utf-8">
     <title>YED Spoke Example</title>
-    <link rel="stylesheet" href="/assets/css/bulma.min.css">
-    <link rel="stylesheet" href="/assets/css/styles.css">
+    <link rel="stylesheet" href="/yed-spoke-example/assets/css/bulma.min.css">
+    <link rel="stylesheet" href="/yed-spoke-example/assets/css/styles.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script src="/assets/js/cscustom.js"></script>
-    <link rel="icon" type="image/png" href="/assets/images/yubico-icon.png">
+    <script src="/yed-spoke-example/assets/js/cscustom.js"></script>
+    <link rel="icon" type="image/png" href="/yed-spoke-example/assets/images/yubico-icon.png">
   </head>
   <body>
     {% include heading.html %}
