Fix in table of contents

--- a/docs/_includes/navigation.html
+++ b/docs/_includes/navigation.html
@@ -1,6 +1,6 @@
 <div class="nav-toc">
     <h4>Table of Contents</h4>
-    <h6><a href="/">Overview</a></h6>
+    <h6><a href="/yed-spoke-example">Overview</a></h6>
     <h6>Learn</h6>
     <ul class="table-of-contents">
         <li>
