added bonus lab changes to workshop

--- a/docs/_includes/navigation.html
+++ b/docs/_includes/navigation.html
@@ -10,7 +10,7 @@
             <a href="/yed-spoke-example/learn/create-a-scoped-application">Create a Scoped Application</a>
         </li>
         <li>
-            <a href="/yed-spoke-example/learn/add-to-service-catalog">Add a YubiKey to the Service Catalog</a>
+            <a href="/yed-spoke-example/learn/create-a-catalog-item-for-your-yubikey-order">Create a Catalog Item for your YubiKey Order</a>
         </li>
         <li>
             <a href="/yed-spoke-example/learn/create-action">Create the Action</a>
@@ -20,6 +20,9 @@
         </li>
         <li>
             <a href="/yed-spoke-example/learn/input-script">The Input Script Step</a>
+        </li>
+        <li>
+            <a href="/yed-spoke-example/learn/create-a-connection-alias">Create a Connection Alias</a>
         </li>
         <li>
             <a href="/yed-spoke-example/learn/rest-step">The REST Step</a>
@@ -37,6 +40,9 @@
             <a href="/yed-spoke-example/learn/add-flow-logic">Add the Flow Logic to the Flow</a>
         </li>
         <li>
+            <a href="/yed-spoke-example/learn/add-the-flow-to-the-catalog-item">Add the Flow to the Catalog Item</a>
+        </li>
+        <li>
             <a href="/yed-spoke-example/learn/test-flow">Test the Flow</a>
         </li>
         <li>
@@ -45,6 +51,15 @@
         <li>
             <a href="/yed-spoke-example/learn/test-workflow">Test the Workflow</a>
         </li>
+        <li>
+            <a href="/yed-spoke-example/learn/bonus-lab">Bonus Lab - Send Your Users an Email With the Tracking Link Information</a>
+        </li>
+        <li>
+            <a href="/yed-spoke-example/learn/create-the-get-shipments-action">Create the GET Shipments Action</a>
+        </li>
+        <li>
+            <a href="/yed-spoke-example/learn/update-the-flow-to-send-shipment-tracking-information">Update the Flow to Send Shipment Tracking Information</a>
+        </li>        
     </ul>
     <h6><a href="/yed-spoke-example/references">References</a></h6>
     <h6><a href="/yed-spoke-example/help-and-support">Help and Support</a></h6>
