Adding examples to docs on low inv monitoring

--- a/docs/_includes/navigation.html
+++ b/docs/_includes/navigation.html
@@ -61,6 +61,18 @@
             <a href="/yed-spoke-example/learn/update-the-flow-to-send-shipment-tracking-information">Update the Flow to Send Shipment Tracking Information</a>
         </li>        
     </ul>
+    <h6>Error Handling</h6>
+    <ul class="table-of-contents">
+        <li>
+            <a href="/yed-spoke-example/error-handling/low-inventory">Monitor for Low Inventory</a>
+        </li>
+        <li>
+            <a href="/yed-spoke-example/error-handling/low-inventory-action">Monitor for Low Inventory - Action</a>
+        </li>
+        <li>
+            <a href="/yed-spoke-example/error-handling/low-inventory-flow">Monitor for Low Inventory - Flow</a>
+        </li>
+    </ul>
     <h6><a href="/yed-spoke-example/references">References</a></h6>
     <h6><a href="/yed-spoke-example/help-and-support">Help and Support</a></h6>
 </div>
